@@ -1,2 +1,3 @@
 set JAVA_HOME=C:\Program Files\Java\jdk1.7.0_07
+set MAVEN_OPTS=-Xmx1512m -XX:MaxPermSize=256m
 set PATH=C:\Windows\System32;C:\codejam\MinGW\bin;C:\codejam\MinGW\mingw32\bin;C:\codejam\MinGW\msys\1.0\bin;C:\Program Files\Java\jdk1.7.0_07\bin;c:\ruby193\bin;C:\codejam\apache-maven-3.0.4\bin
